--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           About <span>Us</span>
         </h2>
         <p>
-          Magni quod blanditiis non minus sed aut voluptatum illum quisquam aspernatur ullam vel beatae rerum ipsum voluptatibus
+          Magni quod blanditiis non minus oke sed aut voluptatum illum quisquam aspernatur ullam vel beatae rerum ipsum voluptatibus
         </p>
       </div>
       <div class="row">
